new editor expand function
replaced ArcGIS JS API expand widget with a vanilla JS button & custom icons so it doesn't take up so much screen space on mobile phones

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     </div>
 
     <!-- set up main app area -->
-    <div id="viewDiv"></div>
+    <div id="viewDiv">
+      <button
+        id="editButton"
+        class="esri-widget"
+        onclick="toggleEdit()"
+      ></button>
+    </div>
   </body>
 
   <script src="KlappPhipps.js"></script>
