updated renderers & basemap
added unique renderer for the trails & updated the feature effects filter to reflect them

added radio button for access trails

updated the basemap

still playing with CSS to clean up the Editor interface

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <!-- biking trails -->
       <input type="radio" id="bike" name="trailTypes" value="bike" />
       <label for="bike">bike</label>
+      <!-- access trails -->
+      <input type="radio" id="access" name="trailTypes" value="access" />
+      <label for="access">access</label>
     </div>
 
     <!-- set up main app area -->
